--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -12,7 +12,7 @@ jobs:
   performance-testing:
     runs-on: ubuntu-latest
 
-    if: ${{ github.repository_owner != 'nextcloud-gmbh' }}
+    if: ${{ github.repository_owner != 'h1418' }}
 
     strategy:
       fail-fast: false
